browser/main/global.styl
global-reset()

DEFAULT_FONTS = 'OpenSans', helvetica, arial, sans-serif

html, body
  width 100%
  height 100%
  overflow hidden

body
  font-family DEFAULT_FONTS
  color textColor
  font-size fontSize
  font-weight 200

button, input, select, textarea
  font-family DEFAULT_FONTS

div, span, a, button, input, textarea
  box-sizing border-box

a
  color $brand-color
  &:hover
    color lighten($brand-color, 5%)
  &:visited
    color $brand-color

hr
  border-top none
  border-bottom solid 1px $border-color
  margin 15px 0

button
  font-weight 400
  cursor pointer
  font-size 12px
  &:focus, &.focus
    outline none
  &:disabled
    cursor not-allowed
input
  &:disabled
    cursor not-allowed
.noSelect
  noSelect()

.text-center
  text-align center

.form-group
  margin-bottom 15px
  &>label
    display block
    margin-bottom 5px

textarea.block-input
  resize vertical
  height 125px
  border-radius 5px
  padding 5px 10px

#content
  fullsize()

modalZIndex= 1000
modalBackColor = transparentify(white, 65%)
.ace_focus
  outline-color rgb(59, 153, 252)
  outline-offset 0px
  outline-style auto
  outline-width 5px
.ModalBase
  fixed top left bottom right
  z-index modalZIndex
  display flex
  align-items center
  justify-content center

  &.hide
    display none
  .modalBack
    absolute top left bottom right
    background-color modalBackColor
    z-index modalZIndex + 1
body[data-theme="dark"]
  .ModalBase
    .modalBack
      background-color alpha(black, 60%)

.CodeMirror
  font-family inherit !important
  line-height 1.4em
  height 100%
.CodeMirror > div > textarea
  margin-bottom -1em
.CodeMirror-focused .CodeMirror-selected
  background #B1D7FE
.CodeMirror-line::selection, .CodeMirror-line > span::selection, .CodeMirror-line > span > span::selection
  background #B1D7FE
.CodeMirror-line::-moz-selection, .CodeMirror-line > span::-moz-selection, .CodeMirror-line > span > span::-moz-selection
  background #B1D7FE
::selection
  background #B1D7FE

